final source code

--- a/DesignPatterns/Pages/Index.cshtml
+++ b/DesignPatterns/Pages/Index.cshtml
@@ -7,4 +7,10 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    Click here to view the <a href="@Url.Action("main1")">SRP-OCP</a> patern<br />
+    Click here to view the <a href="@Url.Action("main2")">Liskov-ISP</a> patern<br />
+    Click here to view the <a href="@Url.Action("main3")">DIP</a> patern<br />
+    Click here to view the <a href="@Url.Action("main4")">adapter</a> patern<br />
+    Click here to view the <a href="@Url.Action("main5")">factory</a> patern<br />
+    Click here to view the <a href="@Url.Action("main6")">abstract factory</a> patern
 </div>
